syntax = "proto3";

option go_package = "./e_commerce";

// The service definition.
service OrderService{
    rpc CreateOrder(CreateOrderRequest)returns(Order){}
    rpc GetOrderList(GetOrderListRequest)returns(GetOrderListResponse){}
    rpc GetOrderById(GetOrderByIdRequest)returns(GetOrderByIdResponse){}
}

message CreateOrderRequest{
    string product_id = 1;
    int32  quantity = 2;
    string user_name = 3;
    string user_address = 4;
    string user_phone = 5;
}

message Order{
    string id = 1;
    string product_id = 2;
    int32  quantity = 3;
    string user_name = 4;
    string user_address = 5;
    string user_phone = 6;
    string created_at = 7;
}

message GetOrderListRequest{
    int32 offset = 1;
    int32 limit = 2;
    string search = 3;
}

message GetOrderListResponse{
    repeated Order orders = 1;
}

message GetOrderByIdRequest{
    string id = 1;
}

message GetOrderByIdResponse{
    message Product{
        string id = 1;
        string category_id = 2;
        string title = 3;
    }
    string id = 1;
    int32 quantity = 2;
    string user_name = 3;
    string user_address = 4;
    string user_phone = 5;
    Product product = 6;
    string created_at = 7;
}
